[package]
name = "rust_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdk = "0.1.0"
wdk-alloc = "0.1.0"
wdk-panic = "0.1.0"
wdk-sys = "0.1.0"
# 宽字符
# widestring = "1.0.2"
# 类型别名
cty = "0.2.2"

[build-dependencies]
wdk-build = "0.1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk]

[profile.dev]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations

[profile.release]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations