workspace = { members = [ "dependencies/moon-feature", "dependencies/moon-instructions","dependencies/moon-struct"] }
[package]
name = "rust_driver"
version = "0.1.0"
edition = "2021"


[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
lazy_static = "1.4.0"

cty = "0.2.2"
# moon-hook = "0.1.0"
# moon-log = "0.1.0"
moon-struct = { path = "./dependencies/moon-struct",version = "*" }
moon-instructions = { path = "./dependencies/moon-instructions",version = "*" }
moon-feature = { path = "./dependencies/moon-feature",version = "*" }
moon-driver-utils = { path = "./dependencies/moon-driver-utils",version = "*" }

[build-dependencies]
wdk-build = "0.2.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk]

[profile.dev]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations

[profile.release]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations
