[package]
name = "moon-driver-utils"
version = "0.1.0"
edition = "2021"

description = "Windows Kernel Utils"


[dependencies]
wdk = "0.2.0"
wdk-sys = "0.2.0"
lazy_static = "1.4.0"

moon-struct={path = "../moon-struct",version = "*"}
# // todo delete
moon-instructions={path = "../moon-instructions",version = "*"}